--- a/app/src/main/res/layout/activity_main_new.xml
+++ b/app/src/main/res/layout/activity_main_new.xml
@@ -8,12 +8,12 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-        <androidx.cardview.widget.CardView
+    <androidx.cardview.widget.CardView
             android:id="@+id/default_prompt"
             android:layout_width="match_parent"
             android:layout_height="70dp"
             android:layout_gravity="center"
-            app:cardBackgroundColor="@android:color/holo_green_light"
+            app:cardBackgroundColor="@color/gradient3"
             app:cardCornerRadius="4dp">
             <Switch
                 android:id="@+id/switch1"
@@ -28,12 +28,11 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
+    <androidx.cardview.widget.CardView
             android:id="@+id/manual_prompt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:cardBackgroundColor="@android:color/holo_blue_light"
+            app:cardBackgroundColor="@color/colorAccent"
             app:cardCornerRadius="4dp">
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:id="@+id/linearLayoutManaulButtons"
@@ -107,18 +106,48 @@
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.cardview.widget.CardView>
     <androidx.cardview.widget.CardView
-        android:id="@+id/cardview_action"
+        android:id="@+id/cardview_duration"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:layout_gravity="center"
-        app:cardBackgroundColor="@android:color/holo_green_light"
+        app:cardBackgroundColor="@color/colorPrimary"
         app:cardCornerRadius="4dp">
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
             <TextView
-                android:id="@+id/textview_alarm_end"
+                android:id="@+id/textview_duration"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.15"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="22dp"
+                android:layout_marginEnd="16dp"
+                android:text="@string/duration_prompt"
+                android:textAlignment="center"
+                android:textSize="16sp"/>
+            <Spinner
+                android:id="@+id/duration_spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"/>
+        </androidx.appcompat.widget.LinearLayoutCompat>
+    </androidx.cardview.widget.CardView>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardview_action"
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:layout_gravity="center"
+        app:cardBackgroundColor="@color/gradient5"
+        app:cardCornerRadius="4dp">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/textview_alarm"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="0.15"
@@ -139,9 +168,10 @@
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.cardview.widget.CardView>
 
-        <androidx.recyclerview.widget.RecyclerView
+
+    <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_data"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="500dp"
             android:scrollbars="vertical" />
-    </androidx.appcompat.widget.LinearLayoutCompat>
+</androidx.appcompat.widget.LinearLayoutCompat>
